--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -7,5 +7,9 @@
       "dest": "/server.js",
       "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
     }
-  ]
+  ],  "functions": {
+    "server": {
+      "maxDuration": 60
+    }
+  }
 }
