--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -11,6 +11,8 @@
   "functions": {
     "*.js": {
       "maxDuration": 60
-    }
+    },"src/controllers/ai.controller.js": {
+      "maxDuration": 30
+    },
   }
 }
